added .env.example
