# api/docs/swagger.yaml
@@ -1008,4 +1008,9 @@ paths:
       summary: update a time table
       tags:
       - time_table
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
