# api/router.go
@@ -17,6 +17,9 @@ import (
 // @title           Swagger Example API
 // @version         1.0
 // @description     This is a sample server celler server.
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 func New(store storage.IStorage, service service.IServiceManager, log logger.ILogger) *gin.Engine {
 	h := handler.NewStrg(store, service, log)
 
